kubernetes/apps/default/audiobookshelf/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: audiobookshelf
      app.kubernetes.io/instance: audiobookshelf
      app.kubernetes.io/controller: audiobookshelf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiobookshelf
        app.kubernetes.io/instance: audiobookshelf
        app.kubernetes.io/controller: audiobookshelf
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/advplyr/audiobookshelf:2.33.1
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            httpGet:
              path: /healthcheck
              port: 80
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /healthcheck
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 2500Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tmpfs
              mountPath: /.npm
              subPath: .npm
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: audiobookshelf
        - name: tmpfs
          emptyDir: {}
