kubernetes/apps/default/audiobookshelf/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: default
  labels:
    app.kubernetes.io/name: audiobookshelf
    app.kubernetes.io/instance: audiobookshelf
    app.kubernetes.io/controller: audiobookshelf
    app.kubernetes.io/service: audiobookshelf
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: audiobookshelf
    app.kubernetes.io/instance: audiobookshelf
    app.kubernetes.io/controller: audiobookshelf
